Officially dropped MC 1.7 support